--- a/package.json
+++ b/package.json
@@ -1,27 +1,44 @@
 {
-  "name": "next-with-irys",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.7"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.7",
-    "@eslint/eslintrc": "^3"
-  }
+    "name": "next-with-irys",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@irys/query": "^0.0.9",
+        "@irys/upload-ethereum": "^0.0.14",
+        "@irys/web-upload": "^0.0.14",
+        "@irys/web-upload-ethereum": "^0.0.14",
+        "@irys/web-upload-ethereum-viem-v2": "^0.0.15",
+        "@nixjs23n6/web-storage": "^0.0.4",
+        "@radix-ui/react-dialog": "^1.1.5",
+        "@radix-ui/react-dropdown-menu": "^2.1.5",
+        "@radix-ui/react-slider": "^1.2.2",
+        "@radix-ui/react-visually-hidden": "^1.1.1",
+        "@reown/appkit": "^1.6.5",
+        "@reown/appkit-adapter-wagmi": "^1.6.5",
+        "@tanstack/react-query": "^5.66.0",
+        "clsx": "^2.1.1",
+        "next": "15.1.7",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
+        "viem": "^2.23.1",
+        "wagmi": "^2.14.11"
+    },
+    "devDependencies": {
+        "@eslint/eslintrc": "^3",
+        "@types/node": "^20",
+        "@types/react": "^19",
+        "@types/react-dom": "^19",
+        "eslint": "^9",
+        "eslint-config-next": "15.1.7",
+        "postcss": "^8",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5",
+        "pino-pretty": "^13.0.0"
+    }
 }
